--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	],
 	"dependencies": {
 		"@easepick/bundle": "^1.2.1",
-		"@tarekraafat/autocomplete.js": "^10.2.7"
+		"@tarekraafat/autocomplete.js": "^10.2.7",
+		"swiper": "^11.0.7"
 	}
 }
