--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@easepick/bundle": "^1.2.1",
 		"@tarekraafat/autocomplete.js": "^10.2.7",
+		"scrollreveal": "^4.0.9",
 		"swiper": "^11.0.7"
 	}
 }
